--- a/src/components/CharacterCards/CharacterCards.css
+++ b/src/components/CharacterCards/CharacterCards.css
@@ -1,6 +1,7 @@
 .card {
   background: #fff;
   border-radius: 2px;
+  border: 5px solid white;
   height: 175px;
   margin: 1rem;
   width: 225px;
@@ -15,7 +16,7 @@
   height: 100%;
   overflow: hidden;
   text-align: center;
-  background: #6caddc;
+  background: #513384;
 }
 .card > .img-container > img {
   width: 60%;
